# chip8

./: Cargo.toml  LICENCE  README.md
.github/workflows/: audit.yaml
chip8/: Cargo.toml
chip8-cli/: Cargo.toml
chip8-cli/src/: main.rs
chip8-win/: Cargo.toml  input.yaml
chip8-win/src/: app.rs  error.rs  inputmap.rs  lib.rs  main.rs  render.rs  shader_chip8.frag  shader_chip8.geom  shader_chip8.vert  window.rs
chip8-win/src/shaders/: chip8.frag  chip8.geom  chip8.vert
chip8/benches/: maze.rs
chip8/programs/: README.md
chip8/src/: bytecode.rs  cli.rs  clock.rs  constants.rs  cpu.rs  devices.rs  disasm.rs  error.rs  fontset.asm  interp.rs  lib.rs  main.rs  vm.rs
chip8/src/asm/: assembler.rs  cursor.rs  lexer.rs  mod.rs  token_stream.rs  tokens.rs
chip8/src/disasm/: disasm2.rs  ir.rs
chip8/tests/: maze.asm  test_asm.rs  test_disasm2.rs
chip8_bytecode/: Cargo.toml
chip8_bytecode/src/: dis.rs  lib.rs  utils.rs
chip8_compiler/: Cargo.toml
chip8_compiler/src/: lex.rs  lib.rs  token_stream.rs  tokens.rs  trivia.rs
chip8_compiler/src/compile/: codegen.rs  consteval.rs  ir.rs  mapper.rs  mod.rs  register.rs  symbol.rs
chip8_compiler/src/parsing/: block.rs  comment.rs  delim.rs  expr.rs  func.rs  ident.rs  literal.rs  mod.rs  prog.rs  stmts.rs  unit.rs  visitor.rs
chip8_compiler/tests/: array.chip8  call.chip8  expr.chip8  func.chip8  pointers.chip8  stmts.chip8  struct.chip8  test_call.rs  test_expr.rs  test_func.rs  test_stmts.rs
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs  utils.rs
chip8_tree/: Cargo.toml
chip8_tree/src/: lib.rs  nodes.rs  static_tree.rs  utils.rs
design/: language.md
programs/: collision_test.asm  fontset_test.asm
