[package]
name = "chip8-win"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { path = "../chip8" }

# Logging
log = "0.4"
slog = "2.7"
slog-async = "2.7"
slog-scope = "4.4"
slog-stdlog = "4.1"
slog-term = "2.7"

# Windowing
winit = { version = "0.28", default-features = false }
glutin = "0.30"

# Graphics
glow = "0.12"
