[package]
name = "chip8"
version = "0.3.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Increases runtime performance because
# LLVM has more opportunities to inline functions.
#
# Slows down compilation.
codegen-units = 1
lto = "fat"

[[bin]]
name = "chip8"
path = "src/bin/cli.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "maze"
harness = false
# FIXME: criterion is ignoring the feature defined here
features = ["throttle"]

[features]
default = []

op_trace = []

# Turn off the CPU clock and run the interpreter as quickly as possible.
throttle = []
