[package]
name = "chip8"
version = "0.3.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chip8"
path = "src/bin/cli.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "maze"
harness = false

[features]
default = []

op_trace = []

# Turn off the CPU clock and run the interpreter as quickly as possible.
throttle = []
