[package]
name = "chip8"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "maze"
harness = false

[features]
default = ["serde"]

trace_opcodes = []

# Turn off the CPU clock and run the interpreter as quickly as possible.
throttle = []

serde = ["dep:serde"]
