[package]
name = "chip8_tree"
version = "0.1.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_core = { version = "*", path = "../chip8_core" }
rand = "0.8"
